--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "qs": "^6.14.0",
+    "@types/qs": "^6.9.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
